# homeassistant-stubs

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  update_stubs.py
.github/: dependabot.yml
.github/actions/install-deps/: action.yml
.github/workflows/: ci.yaml  publish.yaml
homeassistant-stubs/: __main__.pyi  async_timeout_backcompat.pyi  backup_restore.pyi  block_async_io.pyi  bootstrap.pyi  config.pyi  config_entries.pyi  const.pyi  core.pyi  core_config.pyi  data_entry_flow.pyi  exceptions.pyi  loader.pyi  requirements.pyi  runner.pyi  setup.pyi
homeassistant-stubs/auth/: __init__.pyi  auth_store.pyi  const.pyi  jwt_wrapper.pyi  models.pyi  session.pyi
homeassistant-stubs/auth/mfa_modules/: __init__.pyi  insecure_example.pyi  notify.pyi  totp.pyi
homeassistant-stubs/auth/permissions/: __init__.pyi  const.pyi  entities.pyi  events.pyi  merge.pyi  models.pyi  system_policies.pyi  types.pyi  util.pyi
homeassistant-stubs/auth/providers/: __init__.pyi  command_line.pyi  homeassistant.pyi  insecure_example.pyi  legacy_api_password.pyi  trusted_networks.pyi
homeassistant-stubs/backports/: enum.pyi  functools.pyi
homeassistant-stubs/components/: __init__.pyi
homeassistant-stubs/components/abode/: __init__.pyi  alarm_control_panel.pyi  binary_sensor.pyi  camera.pyi  config_flow.pyi  const.pyi  cover.pyi  entity.pyi  light.pyi  lock.pyi  sensor.pyi  services.pyi  switch.pyi
homeassistant-stubs/components/acaia/: __init__.pyi  binary_sensor.pyi  button.pyi  config_flow.pyi  const.pyi  coordinator.pyi  diagnostics.pyi  entity.pyi  sensor.pyi
homeassistant-stubs/components/accuweather/: __init__.pyi  config_flow.pyi  const.pyi  coordinator.pyi  diagnostics.pyi  model.pyi  sensor.pyi  system_health.pyi  weather.pyi
homeassistant-stubs/components/acer_projector/: const.pyi  switch.pyi
homeassistant-stubs/components/acmeda/: __init__.pyi  base.pyi  config_flow.pyi  const.pyi  cover.pyi  entity.pyi  errors.pyi  helpers.pyi  hub.pyi  sensor.pyi
homeassistant-stubs/components/actiontec/: const.pyi  device_tracker.pyi  model.pyi
homeassistant-stubs/components/actron_air/: __init__.pyi  climate.pyi  config_flow.pyi  const.pyi  coordinator.pyi  diagnostics.pyi  entity.pyi  switch.pyi
homeassistant-stubs/components/adax/: __init__.pyi  climate.pyi  config_flow.pyi  const.pyi  coordinator.pyi  sensor.pyi
homeassistant-stubs/components/adguard/: __init__.pyi  config_flow.pyi  const.pyi  entity.pyi  sensor.pyi  switch.pyi  update.pyi
homeassistant-stubs/components/aftership/: __init__.pyi  config_flow.pyi  const.pyi  sensor.pyi
homeassistant-stubs/components/ai_task/: __init__.pyi  const.pyi  entity.pyi  http.pyi  media_source.pyi  task.pyi
homeassistant-stubs/components/air_quality/: __init__.pyi  condition.pyi  const.pyi  trigger.pyi
homeassistant-stubs/components/airgradient/: __init__.pyi  button.pyi  config_flow.pyi  const.pyi  coordinator.pyi  diagnostics.pyi  entity.pyi  number.pyi  select.pyi  sensor.pyi  switch.pyi  update.pyi
homeassistant-stubs/components/airly/: __init__.pyi  air_quality.pyi  config_flow.pyi  const.pyi  coordinator.pyi  diagnostics.pyi  model.pyi  sensor.pyi  system_health.pyi
homeassistant-stubs/components/airnow/: __init__.pyi  config_flow.pyi  const.pyi  coordinator.pyi  diagnostics.pyi  sensor.pyi
homeassistant-stubs/components/airobot/: __init__.pyi  button.pyi  climate.pyi  config_flow.pyi  coordinator.pyi  diagnostics.pyi  entity.pyi  models.pyi  number.pyi  sensor.pyi  switch.pyi
homeassistant-stubs/components/airos/: __init__.pyi  binary_sensor.pyi  button.pyi  config_flow.pyi  const.pyi  coordinator.pyi  diagnostics.pyi  entity.pyi  helpers.pyi  sensor.pyi  update.pyi
homeassistant-stubs/components/airq/: __init__.pyi  config_flow.pyi  const.pyi  coordinator.pyi  diagnostics.pyi  number.pyi  sensor.pyi
homeassistant-stubs/components/airthings/: __init__.pyi  config_flow.pyi  const.pyi  coordinator.pyi  sensor.pyi
homeassistant-stubs/components/airthings_ble/: __init__.pyi  config_flow.pyi  const.pyi  coordinator.pyi  (+1 more)
homeassistant-stubs/helpers/: __init__.pyi  aiohttp_client.pyi  aiohttp_compat.pyi  area_registry.pyi  automation.pyi  backup.pyi  category_registry.pyi  chat_session.pyi  check_config.pyi  collection.pyi  condition.pyi  config_entry_flow.pyi  config_entry_oauth2_flow.pyi  config_validation.pyi  data_entry_flow.pyi  debounce.pyi  deprecation.pyi  device.pyi  device_registry.pyi  discovery.pyi  discovery_flow.pyi  dispatcher.pyi  entity.pyi  entity_component.pyi  entity_platform.pyi  entity_registry.pyi  entity_values.pyi  entityfilter.pyi  event.pyi  floor_registry.pyi  frame.pyi  group.pyi  hassio.pyi  helper_config_entry_flow.pyi  helper_integration.pyi  http.pyi  httpx_client.pyi  icon.pyi  importlib.pyi  instance_id.pyi  (+40 more)
homeassistant-stubs/homeassistant/: __main__.pyi  config_entries.pyi  data_entry_flow.pyi  exceptions.pyi  loader.pyi  requirements.pyi  runner.pyi  setup.pyi
homeassistant-stubs/scripts/: __init__.pyi  auth.pyi  check_config.pyi  ensure_config.pyi
homeassistant-stubs/util/: __init__.pyi  aiohttp.pyi  async_.pyi  async_iterator.pyi  collection.pyi  color.pyi  decorator.pyi  distance.pyi  dt.pyi  enum.pyi  event_type.pyi  executor.pyi  file.pyi  frozen_dataclass_compat.pyi  hass_dict.pyi  json.pyi  language.pyi  limited_size_dict.pyi  location.pyi  logging.pyi  loop.pyi  network.pyi  package.pyi  percentage.pyi  pil.pyi  pressure.pyi  process.pyi  read_only_dict.pyi  resource.pyi  ruamel_yaml.pyi  scaling.pyi  signal_type.pyi  speed.pyi  ssl.pyi  system_info.pyi  temperature.pyi  thread.pyi  timeout.pyi  ulid.pyi  unit_conversion.pyi  (+3 more)
homeassistant_core/: requirements_all.txt  requirements_test.txt  requirements_test_all.txt
homeassistant_core/homeassistant/: package_constraints.txt
(+5288 files in other folders)
