[tool.poetry]
name = "homeassistant-stubs"
version = "2022.12.8"
description = "PEP 484 typing stubs for Home Assistant Core"
authors = ["Ruslan Sayfutdinov <ruslan@sayfutdinov.com>"]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development",
    "Typing :: Typed",
]
keywords = ["homeassistant", "typing", "pep484"]
readme = "README.md"
homepage = "https://github.com/KapJI/homeassistant-stubs"
repository = "https://github.com/KapJI/homeassistant-stubs"
packages = [
    { include = "homeassistant-stubs" },
]

[tool.poetry.dependencies]
python = "^3.9"
homeassistant = "2022.12.8"

[tool.poetry.dev-dependencies]
awesomeversion = ">=21.11.0"
black = "^22.12"
codespell = "^2.2.2"
flake8 = "^6.0.0"
flake8-bugbear = "^22.12.6"
flake8-comprehensions = "^3.10.1"
flake8-simplify = "^0.19.3"
flake8-use-fstring = "^1.4"
isort = "^5.11.3"
mypy = "^0.991"
pre-commit = "^2.20.0"
pylint = "^2.15.9"
types-requests = "^2.28.11"
PyGithub = "^1.57"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pylint.format]
max-line-length = "88"

[tool.pylint.basic]
good-names = ["ex", "fp", "i"]

[tool.pylint.messages_control]
disable = [
    "too-many-arguments",
]

[tool.mypy]
python_version = 3.8
show_error_codes = true
strict = true
disallow_any_explicit = true
disallow_any_unimported = true
show_none_errors = true
warn_no_return = true
warn_unreachable = true
