[tool.poetry]
name = "homeassistant-stubs"
version = "2023.2.4"
description = "PEP 484 typing stubs for Home Assistant Core"
authors = ["Ruslan Sayfutdinov <ruslan@sayfutdinov.com>"]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development",
    "Typing :: Typed",
]
keywords = ["homeassistant", "typing", "pep484"]
readme = "README.md"
homepage = "https://github.com/KapJI/homeassistant-stubs"
repository = "https://github.com/KapJI/homeassistant-stubs"
packages = [
    { include = "homeassistant-stubs" },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/KapJI/homeassistant-stubs/issues"
"Release Notes" = "https://github.com/KapJI/homeassistant-stubs/releases"

[tool.poetry.dependencies]
python = "^3.10"
homeassistant = "2023.2.4"

[tool.poetry.dev-dependencies]
awesomeversion = ">=21.11.0"
black = "^23.1"
codespell = "^2.2.2"
flake8 = "^6.0.0"
flake8-bugbear = "^23.1.20"
flake8-comprehensions = "^3.10.1"
flake8-simplify = "^0.19.3"
flake8-use-fstring = "^1.4"
isort = "^5.12.0"
# mypy = "^0.991"
# This version includes https://github.com/python/mypy/pull/14557
# Waiting for the next release
mypy = { git = "https://github.com/python/mypy.git", rev = "cf2e404" }
pre-commit = "^3.0.4"
pylint = "^2.16.1"
types-requests = "^2.28.11"
PyGithub = "^1.57"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pylint.format]
max-line-length = 88

[tool.pylint.basic]
good-names = ["ex", "fp", "i"]

[tool.pylint.messages_control]
disable = [
    "too-many-arguments",
]

[tool.mypy]
python_version = "3.10"
show_error_codes = true
strict = true
disallow_any_explicit = true
disallow_any_unimported = true
show_none_errors = true
warn_no_return = true
warn_unreachable = true
